[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/config/config_templates/component_config_enum.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=2]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/icons/icon_128_to_null.svg" type="Texture" id=4]
[ext_resource path="res://components/config/config_templates/config_custom_tooltip.gd" type="Script" id=5]
[ext_resource path="res://assets/icons/icon_128_info_circle.svg" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/theme/Barlow-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 13
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 10.0

[node name="TemplateEnum" type="VBoxContainer"]
margin_right = 1900.0
margin_bottom = 50.0
custom_constants/separation = 1
script = ExtResource( 1 )

[node name="VarContent" type="HBoxContainer" parent="."]
margin_right = 1900.0
margin_bottom = 32.0

[node name="HintIcon" type="TextureRect" parent="VarContent"]
modulate = Color( 0.123871, 0.346745, 0.480469, 1 )
margin_top = 6.0
margin_right = 18.0
margin_bottom = 26.0
rect_min_size = Vector2( 18, 20 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
script = ExtResource( 5 )

[node name="Control" type="Control" parent="VarContent"]
margin_left = 22.0
margin_right = 22.0
margin_bottom = 32.0

[node name="VarName" type="Label" parent="VarContent"]
margin_left = 26.0
margin_top = 6.0
margin_right = 326.0
margin_bottom = 26.0
rect_min_size = Vector2( 300, 0 )
text = "Description"

[node name="OverridenLabel" type="Label" parent="VarContent"]
visible = false
margin_left = 330.0
margin_top = 8.0
margin_right = 477.0
margin_bottom = 23.0
theme_type_variation = "LabelSmall"
custom_colors/font_color = Color( 0.803922, 0.631373, 0.109804, 1 )
text = "(overriden by external config)"

[node name="VarValueIsNull" type="Label" parent="VarContent"]
visible = false
modulate = Color( 1, 1, 1, 0.439216 )
margin_left = 304.0
margin_right = 1900.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
theme_type_variation = "LabelCode"
text = "= null"

[node name="VarValueEnum" type="OptionButton" parent="VarContent"]
margin_left = 330.0
margin_right = 1871.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Item 0"
items = [ "Item 0", null, false, 0, null, "Item 1", null, false, 1, null, "Item 2", null, false, 2, null ]
selected = 0

[node name="ButtonSetToNull" parent="VarContent" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.235294 )
margin_left = 1875.0
margin_right = 1900.0
margin_bottom = 32.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "To null"
size_flags_vertical = 5
flat = true
icon_tex = ExtResource( 4 )
icon_margin = 3

[node name="ButtonAddValue" parent="VarContent" instance=ExtResource( 3 )]
visible = false
margin_left = 1852.0
margin_right = 1885.0
margin_bottom = 34.0
hint_tooltip = "Add Value"
icon_tex = ExtResource( 2 )
icon_margin = 3

[node name="Description" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
margin_top = 33.0
margin_right = 1900.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 7 )
text = "Description"

[connection signal="item_selected" from="VarContent/VarValueEnum" to="." method="_on_VarValueEnum_item_selected"]
[connection signal="pressed" from="VarContent/ButtonSetToNull" to="." method="_on_ButtonSetToNull_pressed"]
[connection signal="pressed" from="VarContent/ButtonAddValue" to="." method="_on_ButtonAddValue_pressed"]
